# fractalgen

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
src/: cli.rs  cmap.rs  lib.rs  main.rs  point.rs  util.rs
src/fractals/: burning_ship.rs  julia.rs  mandelbrot.rs  mod.rs
