[package]
name = "fractalgen"
version = "0.1.0"
authors = ["Sam <tritoke@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
rgb = "0.8"
rayon = "1.5"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0.65"
